feat: add new list to NeumaticoResponse to retrieve observations
